--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "data-submission-form",
   "version": "0.1.2",
   "license": "MIT",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
