--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-i18next": "7.3.0",
     "react-intl": "^2.4.0",
     "react-map-gl": "^3.1.5",
+    "styled-jsx-css-loader": "^0.3.0",
     "superagent": "^3.8.2",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
@@ -58,7 +59,6 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-security": "^1.4.0",
-    "flow-bin": "0.62.0",
-    "styled-jsx-css-loader": "^0.3.0"
+    "flow-bin": "0.62.0"
   }
 }
