--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "analyze": "cross-env ANALYZE=1 next build && cat .next/stats.txt"
   },
   "dependencies": {
-    "@turf/bbox": "^5.1.5",
     "antd": "3.0.3",
     "babel-plugin-import": "^1.6.3",
+    "babel-plugin-inline-import": "^2.0.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -31,7 +31,7 @@
     "i18next-express-middleware": "^1.0.9",
     "i18next-node-fs-backend": "^1.0.0",
     "i18next-xhr-backend": "^1.4.3",
-    "isomorphic-unfetch": "^2.0.0",
+    "less": "^2.7.3",
     "mapbox-gl": "^0.43.0",
     "mapbox-gl-dual-scale-control": "^0.1.1",
     "moment": "^2.20.1",
@@ -43,9 +43,7 @@
     "react-dom": "^16.0.0",
     "react-geolocated": "^2.2.1",
     "react-i18next": "7.3.0",
-    "react-intl": "^2.4.0",
-    "react-map-gl": "^3.1.5",
-    "styled-jsx-css-loader": "^0.3.0",
+    "styled-jsx-plugin-less": "^0.0.1-alpha.2",
     "superagent": "^3.8.2",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
