--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "antd": "3.0.3",
     "babel-plugin-import": "^1.6.3",
-    "babel-plugin-inline-import": "^2.0.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -43,14 +42,13 @@
     "react-dom": "^16.0.0",
     "react-geolocated": "^2.2.1",
     "react-i18next": "7.3.0",
-    "styled-jsx-plugin-less": "^0.0.1-alpha.2",
+    "styled-jsx-css-loader": "^0.3.0",
     "superagent": "^3.8.2",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-bundle-size-analyzer": "^2.7.0",
     "xcomponent": "^6.0.33"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb-standard": "^1.6.6",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-flowtype": "^2.40.1",
