--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "NODE_ENV=production node server.js",
     "deploy-patch": "node patch && yarn run deploy",
     "deploy": "/bin/sh deploy.sh",
+    "eslint": "node_modules/eslint/bin/eslint.js",
     "analyze": "cross-env ANALYZE=1 next build && cat .next/stats.txt"
   },
   "dependencies": {
@@ -47,12 +48,17 @@
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb-standard": "^1.6.6",
+    "eslint-config-standard": "^12.0.0-alpha.0",
+    "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-unicorn": "^4.0.3",
     "flow-bin": "0.71.0"
   }
 }
