--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,12 @@
     "flowtype/use-flow-type": 1,
     "security/detect-object-injection": "off",
     "unicorn/filename-case": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "object-curly-spacing": "off",
+    "standard/object-curly-even-spacing": [2, "either"],
+    "unicorn/catch-error-name": ["error", {"name": "err"}],
+    "unicorn/prevent-abbreviations": "off",
+    "react/jsx-handler-names": "off"
   },
 
   "env": {
@@ -63,7 +68,7 @@
   "settings": {
     "react": {
       "pragma": "React",
-      "version": "15.0"
+      "version": "16.4"
     }
   }
 }
