--- a/package.json
+++ b/package.json
@@ -4,61 +4,65 @@
   "license": "MIT",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
-    "build": "NODE_ENV=production ASSET_CDN_PREFIX=https://hpvhe47439ygwrt.belugacdn.link/maphubs/data-submission-form node --max_old_space_size=4096 node_modules/next/dist/bin/next-build",
+    "dev": "yarn run next dev -p 4006",
+    "build": "NODE_ENV=production ASSET_CDN_PREFIX=https://hpvhe47439ygwrt.belugacdn.link/maphubs/data-submission-form yarn run next build",
     "export": "NODE_ENV=production ASSET_CDN_PREFIX=https://hpvhe47439ygwrt.belugacdn.link/maphubs/data-submission-form node node_modules/next/dist/bin/next-export -o .next-export",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production yarn run next start -p 4006",
     "deploy-patch": "node patch && yarn run deploy",
     "deploy": "/bin/sh deploy.sh",
     "eslint": "node_modules/eslint/bin/eslint.js",
     "analyze": "cross-env ANALYZE=1 next build && cat .next/stats.txt"
   },
   "dependencies": {
-    "antd": "3.5.0",
+    "@ant-design/icons": "^4.0.2",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-flow": "^7.8.3",
+    "@babel/register": "^7.8.6",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "4.1.4",
     "babel-plugin-import": "^1.7.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "cross-env": "^5.1.4",
-    "dotenv": "^5.0.1",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
-    "getenv": "^0.7.0",
-    "htmlescape": "^1.1.1",
-    "i18next": "^11.2.3",
-    "i18next-browser-languagedetector": "^2.2.0",
-    "i18next-express-middleware": "^1.1.1",
-    "i18next-node-fs-backend": "^1.0.0",
-    "i18next-xhr-backend": "^1.4.3",
-    "less": "^2.7.3",
-    "mapbox-gl": "^0.43.0",
+    "getenv": "^1.0.0",
+    "less": "^3.11.1",
+    "less-vars-to-js": "^1.3.0",
+    "mapbox-gl": "^1.9.1",
     "mapbox-gl-dual-scale-control": "^0.1.1",
     "moment": "^2.22.1",
-    "next": "5.1.0",
-    "nprogress": "^0.2.0",
+    "next": "9.3.5",
+    "null-loader": "^4.0.0",
     "numeral": "^2.0.6",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-geolocated": "^2.3.2",
-    "react-i18next": "7.6.1",
-    "styled-jsx-css-loader": "^0.3.0",
-    "superagent": "^3.8.3",
+    "react-geolocated": "^3.0.1",
+    "superagent": "^5.2.2",
+    "webpack-filter-warnings-plugin": "^1.2.1",
     "xcomponent": "^6.0.60"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^12.0.0-alpha.0",
-    "eslint-config-standard-react": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-unicorn": "^4.0.3",
-    "flow-bin": "0.71.0"
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-unicorn": "^18.0.1",
+    "flow-bin": "0.123.0"
   }
 }
